--- a/requirements.txt
+++ b/requirements.txt
@@ -5,3 +5,4 @@ torch_scatter==2.1.2+pt25cu124
 torch_sparse==0.6.18+pt25cu124
 torch_spline_conv==1.2.2+pt25cu124
 torch-geometric==2.6.1
+scikit-learn==1.6.1
