--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,12 @@
-torch==2.5.1+cu124 --index-url https://download.pytorch.org/whl/cu124
-pyg-lib==0.4.0+pt25cu124
-torch_cluster==1.6.3+pt25cu124
-torch_scatter==2.1.2+pt25cu124
-torch_sparse==0.6.18+pt25cu124
-torch_spline_conv==1.2.2+pt25cu124
-torch-geometric==2.6.1
+torch==2.4.1 --index-url https://download.pytorch.org/whl/cu124
+
+torch_geometric==2.6.1
+
+--find-links https://data.pyg.org/whl/torch-2.4.1+cu124.html
+pyg-lib==0.4.0
+torch_cluster==1.6.3
+torch_scatter==2.1.2
+torch_sparse==0.6.18
+torch_spline_conv==1.2.2
+
 scikit-learn==1.6.1
